--- a/build_resources/resources.rc
+++ b/build_resources/resources.rc
@@ -1,1 +1,1 @@
-IDI_ICON1               ICON                    "resources\\logo.ico"
+IDI_ICON1               ICON                    "resources\\textures\\logo.ico"
