Refactored TPS3D's window menu into a seperate class (#565)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -734,6 +734,8 @@ add_library(osccore STATIC
     src/Widgets/UndoButton.hpp
     src/Widgets/UndoRedoPanel.cpp
     src/Widgets/UndoRedoPanel.hpp
+    src/Widgets/WindowMenu.cpp
+    src/Widgets/WindowMenu.hpp
 )
 
 # osccore: target properties
