Refactored OpenSim renderer to use a functional callback (#574)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -492,8 +492,10 @@ add_library(osccore STATIC
     src/OpenSimBindings/Rendering/MuscleDecorationStyle.hpp
     src/OpenSimBindings/Rendering/MuscleSizingStyle.cpp
     src/OpenSimBindings/Rendering/MuscleSizingStyle.hpp
+    src/OpenSimBindings/Rendering/OpenSimDecorationConsumer.hpp
     src/OpenSimBindings/Rendering/OpenSimRenderer.cpp
     src/OpenSimBindings/Rendering/OpenSimRenderer.hpp
+    src/OpenSimBindings/Rendering/SimTKDecorationConsumer.hpp
     src/OpenSimBindings/Rendering/SimTKMeshLoader.cpp
     src/OpenSimBindings/Rendering/SimTKMeshLoader.hpp
     src/OpenSimBindings/Rendering/SimTKRenderer.cpp
