--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "third_party/lunasvg"]
 	path = third_party/lunasvg
 	url = https://github.com/ComputationalBiomechanicsLab/lunasvg
+[submodule "third_party/benchmark"]
+	path = third_party/benchmark
+	url = https://github.com/google/benchmark.git
