Refactored out CachedModelRenderer into seperate class (#11 #28 #48 #85)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -488,9 +488,12 @@ add_library(osccore STATIC
     src/OpenSimBindings/Panels/SimulationViewerPanel.cpp
     src/OpenSimBindings/Panels/SimulationViewerPanel.hpp
 
+    src/OpenSimBindings/Rendering/CachedModelRenderer.cpp
+    src/OpenSimBindings/Rendering/CachedModelRenderer.hpp
     src/OpenSimBindings/Rendering/CustomDecorationOptions.hpp
     src/OpenSimBindings/Rendering/CustomRenderingOptions.cpp
     src/OpenSimBindings/Rendering/CustomRenderingOptions.hpp
+    src/OpenSimBindings/Rendering/ModelRendererParams.hpp
     src/OpenSimBindings/Rendering/MuscleColoringStyle.cpp
     src/OpenSimBindings/Rendering/MuscleColoringStyle.hpp
     src/OpenSimBindings/Rendering/MuscleDecorationStyle.cpp
