--- a/.gitmodules
+++ b/.gitmodules
@@ -45,4 +45,4 @@
 	url = https://github.com/ComputationalBiomechanicsLab/lunasvg
 [submodule "third_party/benchmark"]
 	path = third_party/benchmark
-	url = https://github.com/google/benchmark.git
+	url = https://github.com/ComputationalBiomechanicsLab/benchmark
