--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,12 @@ flycheck_*.el
 # network security
 /network-security.data
 
+# Visual Studio Code user directory
+.vscode/
+
+# artefacts/side-effects from the OSC build script
+opensim-build/
+opensim-dependencies-build/
+opensim-dependencies-install/
+opensim-install/
+osc-build/
